manifests/gateway/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: s6rymclone
          image: rymcloneregistry.azurecr.io/gateway
          ports:
          - containerPort: 7000
