manifests/gateway/service.yml
apiVersion: v1
kind: Service
metadata:
    name: gateway
spec:
    type: LoadBalancer
    ports:
    - port: 80 
    selector:
        app: gateway
