manifests/gateway/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-gateway
  tls:
  - hosts:
    - 20.223.95.138
  secretName: example-tls-cert
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 80
  defaultBackend:
    service:
      name: gateway
      port:
        number: 80
